--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "todo_app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.12.x"
+  },
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
